--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,9 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 img {
@@ -10,8 +14,20 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  flex-basis: 100%;
+  text-align: center;
+  margin: 32px;
 }
-
+.card{
+  width: 200px;
+  margin: 0px 52px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.text{
+  text-align: center;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
