--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,8 +20,12 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 16px;
 }
-
+.text{
+  margin: 8px 0px;
+}
 .icon {
   color: royalblue;
   font-size: 26px;
@@ -33,8 +37,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 0 0 auto;
 }
-
+.header{
+  flex: 1;
+  font-weight: bold;
+  font-size: large;
+}
 .close-button {
   background: #eee;
   border-radius: 50%;
@@ -66,4 +75,19 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+  margin: 0px 4px;
+}
+
+.flex-header{
+  display: flex;
+}
+
+.flex-buttons{
+  display: flex;
+}
+
+.flex-body{
+  display: flex;
+  flex-direction: column;
+  margin-left: 16px;
 }
